syntax = "proto3";

package api.auth.v1.account;
//validate proto
import "validate/validate.proto";
//请求参数注解
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/china-xs/kratos-tpl/api/v1/account;account";
option java_multiple_files = true;
option java_package = "api.auth.v1.account";

message CreateAccountRequest{
  //定义文档必填项目
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["username", "password"]
    }
  };
  string name = 1 [
    //swagger 文档字段备注
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "姓名"},
    //proto 自动生成 validate
    (validate.rules).string={
      ignore_empty:true,//为空不校验
      min_len: 2,
      max_len: 24,
    }
  ];

  string password = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "密码"},
    (validate.rules).string={
      min_len: 6,
      max_len: 12,
    }
  ];
  string email = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "邮箱"},
    (validate.rules).string.email = true
  ];
  string username = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "用户名"},
    (validate.rules).string={
      min_len: 6,
      max_len: 12,
    }
  ];
  string mobile = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "手机号码,rule:+86"},
    //proto 自动生成 validate
    (validate.rules).string={
      ignore_empty:true,//为空不校验
      len:11,
    }
  ];

}

message CreateAccountReply{
  int32 code = 1 [// 404 200
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "状态码，会跟http code 保持一直"}
  ];
  string reason = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "reason 原因"}
  ];
  string message = 3;
  MetaData metadata = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "接口返回数据结构"}
  ];
  message MetaData{
    int32 id = 1 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "账号id"}
    ];
    string name = 2 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "姓名"}
    ];
    string username = 3 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "账号名称"}
    ];
    string email = 4 [
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "邮箱"}
    ];
  }
}