syntax = "proto3";

package api.auth.v1.account;
//http route proto
import "google/api/annotations.proto";
import "v1/account/create_account.proto";

option go_package = "github.com/china-xs/kratos-tpl/api/v1/account;account";
option java_multiple_files = true;
option java_package = "api.auth.v1.account";

service Account {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountReply){
    option (google.api.http) = {//主要作用定义http 路由
      post: "/auth/v1/account",//访问接口路由
      body: "*",//请求方式
    };
  };
  rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountReply);
  rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountReply);
  rpc GetAccount (GetAccountRequest) returns (GetAccountReply);
  rpc ListAccount (ListAccountRequest) returns (ListAccountReply);
}

message UpdateAccountRequest {}
message UpdateAccountReply {}

message DeleteAccountRequest {}
message DeleteAccountReply {}

message GetAccountRequest {}
message GetAccountReply {}

message ListAccountRequest {}
message ListAccountReply {}